remove dynamic route from root

--- a/edge-pages-13-4-8/package.json
+++ b/edge-pages-13-4-8/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
+  ,"deploy":"azioncli edge_applications publish"},
   "dependencies": {
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
